[package]
name = "TorchlightHanging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["psapi","processthreadsapi","handleapi","memoryapi","winuser","std","securitybaseapi","winbase","winerror"]}


[lib]
crate-type = ["cdylib"]
name = "hanging"